--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -1,4 +1,13 @@
 .searchBox {
+  border-radius: 16px;
+  padding: 30px;
+  background-color: #ffffff;
+  max-width: 400px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+  margin: 20px 30px;
+}
+
+.searchBoxLabel {
   color: #0f2f52;
   font-size: 16px;
   font-weight: bold;
@@ -9,8 +18,8 @@
 
 .inputSearchBox {
   outline: none;
-  width: 350px;
-  padding: 10px;
+  width: 100%;
+  padding: 6px 10px;
   border: 1px solid #0f2f52;
   border-radius: 4px;
   color: #0f2f52;
