--- a/src/index.css
+++ b/src/index.css
@@ -9,13 +9,8 @@ body {
   font-size: 16px;
   line-height: 1.5;
   background-color: #f8f9fa;
-  color: #212529;
-}
-
-.container {
-  max-width: 800px;
   margin: 0 auto;
-  padding: 20px;
+  color: #0f2f52;
 }
 
 h1,
@@ -23,10 +18,14 @@ h2,
 h3,
 h4,
 h5,
-h6,
-p {
-  margin: 0;
+h6 {
+  margin: 30px auto;
   padding: 0;
+  text-align: center;
+}
+
+a {
+  text-decoration: none;
 }
 
 ul,
